(executable
 (name poloniex)
 (public_name poloniex)
 (modules poloniex)
 (package poloniex)
 (preprocess (pps ppx_let ppx_sexp_conv))
 (libraries
  core
  async
  logs-async
  logs-async-reporter
  logs-async-ovh
  bs-devkit
  bmex-common
  dtc-pb
  plnx-rest
  plnx-ws
  plnx-ws-async))

(executable
 (name poloniex_data)
 (public_name poloniex-data)
 (modules poloniex_data)
 (package poloniex-data)
 (preprocess (pps ppx_let ppx_sexp_conv))
 (libraries
  logs-async-reporter
  bitv
  bs-devkit
  bmex-common
  leveldb
  tick
  dtc-pb
  plnx-rest
  plnx-ws))
